fixing scrollbar issue

--- a/app/views/pages/style.css
+++ b/app/views/pages/style.css
@@ -3,6 +3,10 @@
   src: url('https://fonts.googleapis.com/css?family=Pacifico');
 }
 
+html {
+  overflow-y: scroll;
+}
+
 #header .grid {  
     z-index: -1;
     display: grid;
